--- a/02 - JS and CSS Clock/index-START.html
+++ b/02 - JS and CSS Clock/index-START.html
@@ -62,11 +62,33 @@
       background:black;
       position: absolute;
       top:50%;
+      transform-origin: 100%;
+      transform: rotate(90deg);
+      transition: all 0.05s;
     }
 
   </style>
 
   <script>
+  const secHand = document.querySelector('.second-hand');
+  const minHand = document.querySelector('.min-hand');
+  const hourHand = document.querySelector('.hour-hand');
+
+  function setDate() {
+    const now = new Date();
+    const seg = now.getSeconds();
+    const min = now.getMinutes();
+    const hour = now.getHours();
+    const secondsDegree = ((seg / 60) * 360) + 90;
+    const minDegree = ((min / 60) * 360) + 90;
+    const hoursDegree = ((hour / 60) * 360) + 90;
+
+    secHand.style.transform = `rotate(${secondsDegree}deg)`;
+    minHand.style.transform = `rotate(${minDegree}deg)`;
+    hourHand.style.transform = `rotate(${hoursDegree}deg)`;
+  }
+
+  setInterval(setDate, 1000);
 
 
   </script>
