--- a/05 - Flex Panel Gallery/index-START.html
+++ b/05 - Flex Panel Gallery/index-START.html
@@ -24,6 +24,7 @@
     .panels {
       min-height:100vh;
       overflow: hidden;
+      display: flex;
     }
 
     .panel {
@@ -41,6 +42,11 @@
       font-size: 20px;
       background-size:cover;
       background-position:center;
+      display: flex;
+      flex-direction: column;
+      flex-grow: 1;
+      align-content: center;
+      justify-content: center;
     }
 
 
@@ -50,11 +56,21 @@
     .panel4 { background-image:url(https://source.unsplash.com/ITjiVXcwVng/1500x1500); }
     .panel5 { background-image:url(https://source.unsplash.com/3MNzGlQM7qs/1500x1500); }
 
+    .panel > *:first-child { transform: translateY(-100%); }
+    .panel.open-active > *:first-child { transform: translateY(0) }
+    .panel > *:last-child { transform: translateY(+100%); }
+    .panel.open-active > *:last-child { transform: translateY(0) }
+
     .panel > * {
       margin:0;
       width: 100%;
       transition:transform 0.5s;
-    }
+      display: flex;
+      justify-content: center;
+      flex: 1 0 auto;
+      align-content: center;
+      align-items: center;
+   }
 
     .panel p {
       text-transform: uppercase;
@@ -68,7 +84,9 @@
 
     .panel.open {
       font-size:40px;
+      flex: 5;
     }
+
 
   </style>
 
@@ -102,6 +120,21 @@
   </div>
 
   <script>
+    const painels = document.querySelectorAll('.panel');
+
+    console.log(painels)
+    function open() {
+      this.classList.toggle('open');
+    }
+    function activate(e) {
+      console.log(e);
+      if (e.propertyName.includes('flex')) {
+        this.classList.toggle('open-active');
+      }
+    }
+
+    painels.forEach(panel => panel.addEventListener('click', open));
+    painels.forEach(panel => panel.addEventListener('transitionend', activate));
 
   </script>
 
