--- a/06 - Type Ahead/index-START.html
+++ b/06 - Type Ahead/index-START.html
@@ -16,6 +16,46 @@
   </form>
 <script>
 const endpoint = 'https://gist.githubusercontent.com/Miserlou/c5cd8364bf9b2420bb29/raw/2bf258763cdddd704f8ffd3ea9a3e81d25e2c6f6/cities.json';
+const cities = [];
+
+fetch(endpoint)
+  .then(blob => blob.json())
+  .then(data => cities.push(...data));
+
+const suggestionsUl = document.querySelector('.suggestions');
+document.querySelector('.search').addEventListener('input', displayMatches);
+
+function findMatches(wordsToMatch, cities) {
+  return cities.filter(place => {
+    const reg = new RegExp(wordsToMatch, 'gi');
+    return place.city.match(reg) || place.state.match(reg);
+  })
+};
+
+function displayMatches() {
+  const suggestions = findMatches(this.value, cities);
+  const suggString = suggestions.map( place => {
+    const regex = new RegExp(this.value, 'gi');
+    const cityName = place.city.replace(regex, `<span class="hl">${this.value}</span>`);
+    const stateName = place.state.replace(regex, `<span class="hl">${this.value}</span>`);
+    return `
+    <li>
+      <span class="name">${cityName}, ${stateName}</span>
+      <span class="population">${place.population}</span>
+    <\li>`;
+  }).join('');
+  suggestionsUl.innerHTML = suggString;
+}
+
+<!--function displayMatches() {-->
+<!--  const suggestions = findMatches(this.value, cities);-->
+<!--  suggestionsUl.innerHTML = "";-->
+<!--  suggestions.forEach( place => {-->
+<!--    const newLi = document.createElement('li');-->
+<!--    newLi.appendChild(document.createTextNode(`${place.state}, ${place.city}`));-->
+<!--    suggestionsUl.appendChild(newLi);-->
+<!--    });-->
+<!--}-->
 
 </script>
   </body>
